// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly  isNotValid time 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderBottomLeftRadius": 0,
        "borderBottomRightRadius": 10,
        "borderRadius": 10,
        "marginVertical": 4,
      }
    }
  >
    <View
      style={
        {
          "paddingBottom": 4,
          "paddingHorizontal": 10,
          "paddingTop": 8,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#353A45",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
              "minHeight": 16,
            },
            undefined,
          ]
        }
      >
        message
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 8,
          "paddingHorizontal": 6,
        }
      }
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly isMe 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#2B78EE",
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 0,
        "borderRadius": 10,
        "marginVertical": 4,
      }
    }
  >
    <View
      style={
        {
          "paddingBottom": 4,
          "paddingHorizontal": 10,
          "paddingTop": 8,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
              "minHeight": 16,
            },
            undefined,
          ]
        }
      >
        message
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 8,
          "paddingHorizontal": 6,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "rgba(255, 255, 255, 0.8)",
              "fontFamily": "Inter-Regular",
              "fontSize": 10,
              "lineHeight": 14,
              "minHeight": 14,
            },
            undefined,
          ]
        }
      >
        12:12
      </Text>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly isMe image 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#2B78EE",
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 0,
        "borderRadius": 10,
        "marginVertical": 4,
      }
    }
  >
    <View
      style={
        [
          {
            "maxHeight": 148,
            "maxWidth": 148,
            "minHeight": 129,
            "minWidth": 129,
          },
          {
            "margin": 4,
          },
        ]
      }
    >
      <Image
        source={
          {
            "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
          }
        }
        style={
          {
            "maxHeight": 148,
            "maxWidth": 148,
            "minHeight": 129,
            "minWidth": 129,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 8,
          "paddingHorizontal": 6,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "rgba(255, 255, 255, 0.8)",
              "fontFamily": "Inter-Regular",
              "fontSize": 10,
              "lineHeight": 14,
              "minHeight": 14,
            },
            undefined,
          ]
        }
      >
        12:12
      </Text>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly isMe image number two 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#2B78EE",
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 0,
        "borderRadius": 10,
        "marginVertical": 4,
      }
    }
  >
    <View
      style={
        [
          {
            "maxHeight": 148,
            "maxWidth": 148,
            "minHeight": 129,
            "minWidth": 129,
          },
          {
            "margin": 4,
          },
        ]
      }
    >
      <Image
        source={42}
        style={
          {
            "maxHeight": 148,
            "maxWidth": 148,
            "minHeight": 129,
            "minWidth": 129,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 8,
          "paddingHorizontal": 6,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "rgba(255, 255, 255, 0.8)",
              "fontFamily": "Inter-Regular",
              "fontSize": 10,
              "lineHeight": 14,
              "minHeight": 14,
            },
            undefined,
          ]
        }
      >
        12:12
      </Text>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly isNotMe 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderBottomLeftRadius": 0,
        "borderBottomRightRadius": 10,
        "borderRadius": 10,
        "marginVertical": 4,
      }
    }
  >
    <View
      style={
        {
          "paddingBottom": 4,
          "paddingHorizontal": 10,
          "paddingTop": 8,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#353A45",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 16,
              "minHeight": 16,
            },
            undefined,
          ]
        }
      >
        message
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 8,
          "paddingHorizontal": 6,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 10,
              "lineHeight": 14,
              "minHeight": 14,
            },
            undefined,
          ]
        }
      >
        12:12
      </Text>
    </View>
  </View>
</View>
`;
